# static-graphviz

./: .gitignore  README.md  clean  pyproject.toml  requirements.testing.txt  run.py  setup.py  test
.github/workflows/: lint.yml  push_macos.yml  push_ubuntu.yml  push_win.yml
bins/: graphviz_2.42.2-3build2_amd64.deb
docker/ubuntu/: Dockerfile  run.py
src/static_graphviz/: _add_paths.py  cli.py  run.py
tests/: test_static_graphviz.py
